--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
+    "com.unity.visualeffectgraph": "12.1.7",
     "com.unity.visualscripting": "1.7.8",
     "com.wooshii.foldericons": "https://github.com/WooshiiDev/Unity-Folder-Icons.git",
     "com.unity.modules.ai": "1.0.0",
